* prevent success page overflow

--- a/src/Components/Success/Success.css
+++ b/src/Components/Success/Success.css
@@ -8,6 +8,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    overflow: hidden;
 }
 .successModal p{
     padding: 20px 0;
